--- a/app/src/main/res/layout/activity_add__item.xml
+++ b/app/src/main/res/layout/activity_add__item.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Add_Item">
+    tools:context=".Services.Items.Add_Item">
 
     <TextView
         android:layout_width="match_parent"
