--- a/app/src/main/res/layout/activity_in__view.xml
+++ b/app/src/main/res/layout/activity_in__view.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".IN_View">
+    tools:context=".Services.StockIn.IN_View">
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
