--- a/app/src/main/res/layout/activity_stock__out__view.xml
+++ b/app/src/main/res/layout/activity_stock__out__view.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Stock_Out_View">
+    tools:context=".Services.StockOut.Stock_Out_View">
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
