--- a/app/src/main/res/layout/activity_add__item.xml
+++ b/app/src/main/res/layout/activity_add__item.xml
@@ -56,8 +56,7 @@
         android:hint="Enter name"
         android:layout_marginTop="60dp"
         android:layout_marginLeft="130dp"
-        android:inputType="textPassword"
-        android:background="@drawable/edit_text"/>
+        android:inputType="textPassword" />
 
 
     <Button
@@ -66,7 +65,6 @@
         android:layout_height="37dp"
         android:layout_marginLeft="90dp"
         android:layout_marginTop="350dp"
-        android:background="@drawable/rounded_button"
         android:gravity="center"
         android:text="SUBMIT "
         />
