--- a/app/src/main/res/layout/activity_forget_password.xml
+++ b/app/src/main/res/layout/activity_forget_password.xml
@@ -8,8 +8,8 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="110dp"
-        android:paddingTop="90dp"
+        android:layout_marginLeft="90dp"
+        android:paddingTop="80dp"
         android:text="Forget Password"
 
         android:textSize="25dp"
@@ -20,31 +20,32 @@
         android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
         android:layout_marginTop="225dp"
-        android:layout_marginLeft="10dp"
+        android:layout_marginLeft="12dp"
         android:text="Username/ID:"
         android:textStyle="bold"
         android:textAppearance="?android:attr/textAppearanceMedium" />
 
     <EditText
         android:id="@+id/usernameET"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_width="280dp"
+        android:layout_marginRight="9dp"
+        android:layout_height="35dp"
         android:layout_alignBottom="@+id/textView2"
-        android:layout_marginLeft="35dp"
+        android:layout_marginLeft="20dp"
+
         android:layout_toRightOf="@+id/textView2"
-        android:hint="username"
-        android:background="@drawable/edit_text">
+        android:background="@drawable/edit_text_boarder1"
+        android:hint="username">
         <requestFocus />
     </EditText>
 
 
     <Button
-        android:id="@+id/submit"
+        android:id="@+id/forget_submit"
         android:layout_width="210dp"
         android:layout_height="37dp"
         android:layout_marginLeft="90dp"
         android:layout_marginTop="350dp"
-        android:background="@drawable/rounded_button"
         android:gravity="center"
         android:text="SUBMIT "
          />
