--- a/app/src/main/res/layout/activity_loginpg.xml
+++ b/app/src/main/res/layout/activity_loginpg.xml
@@ -18,16 +18,15 @@
         />
 
 
-
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginLeft="110dp"
+        android:layout_marginTop="90dp"
         android:text="LOGIN PAGE"
-        android:textSize="25dp"
-        android:textStyle="bold"
 
-        android:paddingTop="90dp"
-        android:layout_marginLeft="130dp"/>
+        android:textSize="25dp"
+        android:textStyle="bold" />
 
 
     <TextView
@@ -37,20 +36,22 @@
         android:layout_alignParentLeft="true"
         android:layout_marginTop="195dp"
         android:layout_marginLeft="10dp"
-        android:text="Username:"
+        android:text="Username :"
         android:textStyle="bold"
         android:textAppearance="?android:attr/textAppearanceMedium" />
 
     <EditText
         android:id="@+id/usernameET"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_width="280dp"
+        android:layout_height="35dp"
+        android:layout_marginRight="9dp"
         android:layout_alignBottom="@+id/textView2"
-        android:layout_marginLeft="35dp"
+        android:layout_marginLeft="10dp"
         android:layout_toRightOf="@+id/textView2"
-        android:hint="username"
-        android:background="@drawable/edit_text">
-        <requestFocus />
+        android:background="@drawable/edit_text_boarder1"
+        android:hint="username">
+        <requestFocus/>
+
     </EditText>
 
     <TextView
@@ -60,20 +61,22 @@
         android:layout_alignLeft="@+id/textView2"
         android:layout_below="@+id/textView2"
         android:layout_marginTop="40dp"
-        android:text="Password:"
+        android:text="Password :"
+
         android:textStyle="bold"
         android:textAppearance="?android:attr/textAppearanceMedium" />
 
     <EditText
         android:id="@+id/passwordET"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_width="260dp"
+        android:layout_height="35dp"
         android:layout_alignBottom="@+id/textView3"
         android:layout_alignLeft="@+id/usernameET"
         android:layout_alignRight="@+id/usernameET"
+        android:background="@drawable/edit_text_boarder1"
         android:hint="password"
-        android:inputType="textPassword"
-        android:background="@drawable/edit_text"/>
+        android:inputType="textPassword" />
+    <requestFocus/>
 
     <LinearLayout
         android:layout_width="wrap_content"
@@ -89,7 +92,6 @@
             android:layout_marginTop="90dp"
             android:text="Login"
 
-            android:background="@drawable/rounded_button"
             android:textStyle="bold"/>
 
 
@@ -98,7 +100,6 @@
             android:layout_width="wrap_content"
             android:layout_height="35dp"
             android:layout_below="@+id/passwordET"
-            android:background="@drawable/rounded_button"
             android:layout_marginTop="90dp"
             android:text="Reset"
             android:textStyle="bold"/>
@@ -117,16 +118,16 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginRight="0dp"
-
+            android:id="@+id/TVforgetPass"
             android:text="Forget Password/"
-            android:textColorLink="@drawable/edit_text"
+
             android:textStyle="italic" />
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:id="@+id/TVregistration"
             android:text="New Registration"
-            android:textColorLink="@drawable/edit_text"
             android:textStyle="italic" />
     </LinearLayout>
 
