--- a/app/src/main/res/layout/activity_new_password.xml
+++ b/app/src/main/res/layout/activity_new_password.xml
@@ -28,24 +28,24 @@
 
     <EditText
         android:id="@+id/usernameET"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_width="280dp"
+        android:layout_marginRight="9dp"
+        android:layout_height="35dp"
         android:layout_alignBottom="@+id/textView2"
-        android:layout_marginLeft="35dp"
+        android:layout_marginLeft="20dp"
         android:layout_toRightOf="@+id/textView2"
-        android:hint="Enter new password"
-        android:background="@drawable/edit_text">
+        android:background="@drawable/edit_text_boarder1"
+        android:hint="Enter new password">
         <requestFocus />
     </EditText>
 
 
     <Button
-        android:id="@+id/submit"
+        android:id="@+id/newPass_submit"
         android:layout_width="210dp"
         android:layout_height="37dp"
         android:layout_marginLeft="90dp"
         android:layout_marginTop="350dp"
-        android:background="@drawable/rounded_button"
         android:gravity="center"
         android:text="SUBMIT "
         />
