--- a/app/src/main/res/layout/activity_otp_page.xml
+++ b/app/src/main/res/layout/activity_otp_page.xml
@@ -30,23 +30,22 @@
     <EditText
         android:id="@+id/usernameET"
         android:layout_width="150dp"
-        android:layout_height="25dp"
+        android:layout_height="35dp"
         android:layout_alignBottom="@+id/textView2"
-        android:layout_marginLeft="35dp"
+        android:layout_marginLeft="20dp"
         android:layout_toRightOf="@+id/textView2"
-        android:hint="Enter OTP"
-        android:background="@drawable/edit_text">
+        android:background="@drawable/edit_text_boarder1"
+        android:hint="Enter OTP">
         <requestFocus />
     </EditText>
 
 
     <Button
-        android:id="@+id/submit"
+        android:id="@+id/otp_submit"
         android:layout_width="210dp"
         android:layout_height="37dp"
         android:layout_marginLeft="90dp"
         android:layout_marginTop="350dp"
-        android:background="@drawable/rounded_button"
         android:gravity="center"
         android:text="SUBMIT "
          />
