--- a/app/src/main/res/layout/activity_otp_page.xml
+++ b/app/src/main/res/layout/activity_otp_page.xml
@@ -4,17 +4,19 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".LoginModule.otp_page">
-
+    tools:context="com.example.stockmangmentnew.LoginModule.otp_page">
     <TextView
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="110dp"
-        android:paddingTop="90dp"
-        android:text="Enter OTP"
-
+        android:text="New Password"
+        android:gravity="center"
+        android:textStyle="bold"
         android:textSize="25dp"
-        android:textStyle="bold" />
+        android:background="#F77F76"
+        />
+
+
+
     <TextView
         android:id="@+id/textView2"
         android:layout_width="wrap_content"
