--- a/app/src/main/res/layout/activity_sign__up.xml
+++ b/app/src/main/res/layout/activity_sign__up.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".LoginModule.sign_UP">
+    tools:context="com.example.stockmangmentnew.LoginModule.sign_UP">
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -49,8 +49,7 @@
     <TableRow
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
-        android:paddingTop="13dp"
-        >
+        android:paddingTop="13dp">
 
         <TextView
             android:id="@+id/conNo"
