--- a/app/src/main/res/layout/activity_sign__up.xml
+++ b/app/src/main/res/layout/activity_sign__up.xml
@@ -84,7 +84,7 @@
             android:text="Email :" />
 
         <EditText
-            android:id="@+id/addEditText"
+            android:id="@+id/emailEditText"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:textSize="15dp"
@@ -133,7 +133,7 @@
             android:text="Photo :" />
 
         <EditText
-            android:id="@+id/vatEditText"
+            android:id="@+id/photEditText"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
 
